# canal

./: CMakeLists.txt  README.md
example/chat_room/: chat_room.proto  chat_room.xml
example/chat_room/chat_client/: CMakeLists.txt  chat_client.hpp  main.cpp  server_connector.hpp
example/chat_room/chat_client/processer/: login_processer.hpp
example/chat_room/chat_server/: CMakeLists.txt  chat_server.hpp  client_listener.hpp  main.cpp
example/chat_room/chat_server/processer/: chat_message_processer.hpp  login_processer.hpp
example/chat_room/protocol/: chat_room.pb.cc  chat_room.pb.h
framework/: application.hpp  endpoint.hpp  framework.hpp  logger.hpp  notify_processer.hpp  package.hpp  rpc_processer.hpp  thread_pool.hpp  types.hpp
